# Qili

./: CMakeLists.txt  Config.h.in  QiliCPack.cmake  QiliIFW.cmake  QiliInstall.cmake  README.md  README_en.md  changelog
App/: CMakeLists.txt  Config.h.in  Qili.rc  QiliApp.cpp  QiliApp.h  QiliApp.qrc  QiliAppGlobal.h  QiliApp_zh_CN.ts  QiliConnection.cpp  QiliConnection.h  QiliCookieJar.cpp  QiliCookieJar.h  QiliGlobal.h  QiliHttp.cpp  QiliHttp.h  QiliLauncher2.ui  QiliLogger.cpp  QiliLogger.h  QiliLogin.cpp  QiliLogin.h  QiliLogin.ui  QiliProtocol.cpp  QiliProtocol.h  QiliSettings.cpp  QiliSettings.h  QiliSettingsDialog.cpp  QiliSettingsDialog.h  QiliSettingsDialog.ui  QiliSocket.cpp  QiliSocket.h  QiliSpeaker.cpp  QiliSpeaker.h  QiliSubtitleLogger.cpp  QiliSubtitleLogger.h  QiliSubtitleLogger.ui  QiliThanksDialog.cpp  QiliThanksDialog.h  QiliThanksDialog.ui  QiliTray.cpp  QiliTray.h  (+3 more)
Designer/: CMakeLists.txt  DesignerGlobal.h  QiliDesigner.cpp  QiliDesigner.h  QiliTextFieldDesigner.cpp  QiliTextFieldDesigner.h  QiliTitleBarDesigner.cpp  QiliTitleBarDesigner.h
IFW/: Qili.linux
IFW/config/: controller.qs  general.xml
Linux/: me.sauntor.qili.desktop.in
Linux/deb/: postinst  postrm
Linux/rpm/: postinst  postrm
Widgets/: CMakeLists.txt  QiliDialog.cpp  QiliDialog.h  QiliTextField.cpp  QiliTextField.h  QiliTitleBar.cpp  QiliTitleBar.h  QiliTitleBar.ui  QiliWidget.h  QiliWidgets.qrc  QiliWidgets_zh_CN.ts  WidgetsGlobal.h
Widgets/themes/: dark.css  light.css
